syntax = "proto3";

package protolca.services;

option java_package = "org.openlca.proto.generated.results";
option java_multiple_files = true;
option java_outer_classname = "ResultServiceProto";

option csharp_namespace = "ProtoLCA.Services";
option go_package = ".;protolca";

import "google/protobuf/empty.proto";
import "olca.proto";
import "result_types.proto";

service ResultService {

  // Calculates a result for the given calculation setup.
  rpc Calculate(CalculationSetup) returns (Result);

  // Get all technosphere flows of the underlying product system of the given
  // result.
  rpc GetTechFlows(Result) returns (stream TechFlow);

  // Get the environmental flows of the given result.
  rpc GetEnviFlows(Result) returns (stream EnviFlow);

  // Get the impact categories of the given result.
  rpc GetImpactCategories(Result) returns (stream Ref);

  // Get the inventory of the given result.
  rpc GetTotalInventory(Result) returns (stream ResultValue);

  // Get the total impact assessment result of the given result.
  rpc GetTotalImpacts(Result) returns (stream ResultValue);

  // Get the direct contribution of a TechFlow to a flow, impact, or cost
  // result. 'Direct' means that this is only the contribution that is
  // directly associated with the production of a product or treatment of
  // a waste flow excluding contributions of upstream and downstream processes.
  rpc GetDirectContribution(TechFlowContributionRequest) returns (ResultValue);

  rpc GetTotalContribution(TechFlowContributionRequest) returns (ResultValue);

  rpc GetTotalContributionOfOne(TechFlowContributionRequest) returns (ResultValue);

  // Get the used impact factors of a result. The request can be for:
  //
  // * an indicator: returns the non-zero factors of that indicator
  // * a flow: returns the factors of that flow for all indicators (including
  //   zero values)
  // * an indicator and flow: returns the factor for that flow which may be zero
  //
  // Nothing is returned if no indicator and flow is given or if the result does
  // not have an impact assessment result.
  rpc GetImpactFactors(ImpactFactorRequest) returns
      (stream ImpactFactorResponse);

  // Disposes the given result on the server side.
  rpc Dispose(Result) returns (google.protobuf.Empty);

}

// A `Result` message is basically just a reference to a real result on the
// server side. As result data can be really large, we do not add them directly
// to the result. Instead you call the respective methods of the result service
// to get them. Because of this, you need to explicitly call `Dispose` when you
// do not need a result anymore. Otherwise you will create memory leaks as the
// result still exists on the server side.
message Result {
  string id = 1 [json_name = "@id"];
}

message ImpactFactorRequest {
  Result result = 1;
  Ref indicator = 2;
  EnviFlow flow = 3;
}

message ImpactFactorResponse {
  Ref indicator = 1;
  EnviFlow flow = 2;
  double value = 3;
}

// The request for a contribution result of a tech-flow.
message TechFlowContributionRequest {
  Result result = 1;
  TechFlow tech_flow = 2;
  oneof result_ref {
    EnviFlow envi_flow = 3;
    Ref impact = 4;
    bool costs = 5;
  }
}
